OVERCLOCK DERP (Let's C now :D)

--- a/arch/arm/boot/dts/msm8974.dtsi
+++ b/arch/arm/boot/dts/msm8974.dtsi
@@ -1166,7 +1166,7 @@
 			< 2457600000 1105000 738 >, /* overclock */
 			< 2572800000 1145000 784 >, /* overclock */
 			< 2649600000 1160000 808 >, /* overclock */
-			< 2726400000 1175000 831 >, /* overclock */
+			< 2726400000 1175000 831 >; /* overclock */
 
 		qcom,speed2-pvs1-bin-v0 =
 			<          0       0   0 >,
@@ -1201,7 +1201,7 @@
 			< 2457600000 1080000 738 >, /* overclock */
 			< 2572800000 1130000 784 >, /* overclock */
 			< 2649600000 1145000 808 >, /* overclock */
-			< 2726400000 1160000 831 >, /* overclock */
+			< 2726400000 1160000 831 >; /* overclock */
 
 		qcom,speed2-pvs2-bin-v0 =
 			<          0       0   0 >,
@@ -1236,7 +1236,7 @@
 			< 2457600000 1055000 738 >, /* overclock */
 			< 2572800000 1115000 784 >, /* overclock */
 			< 2649600000 1130000 808 >, /* overclock */
-			< 2726400000 1150000 831 >, /* overclock */
+			< 2726400000 1150000 831 >; /* overclock */
 
 		qcom,speed2-pvs3-bin-v0 =
 			<          0       0   0 >,
@@ -1271,7 +1271,7 @@
 			< 2457600000 1030000 738 >, /* overclock */
 			< 2572800000 1100000 784 >, /* overclock */
 			< 2649600000 1115000 808 >, /* overclock */
-			< 2726400000 1135000 831 >, /* overclock */
+			< 2726400000 1135000 831 >; /* overclock */
 
 		qcom,speed2-pvs4-bin-v0 =
 			<          0       0   0 >,
@@ -1306,7 +1306,7 @@
 			< 2457600000 1005000 738 >, /* overclock */
 			< 2572800000 1085000 784 >, /* overclock */
 			< 2649600000 1100000 808 >, /* overclock */
-			< 2726400000 1120000 831 >, /* overclock */
+			< 2726400000 1120000 831 >; /* overclock */
 
 		qcom,speed2-pvs5-bin-v0 =
 			<          0       0   0 >,
@@ -1341,7 +1341,7 @@
 			< 2457600000  980000 738 >, /* overclock */
 			< 2572800000 1070000 784 >, /* overclock */
 			< 2649600000 1085000 808 >, /* overclock */
-			< 2726400000 1105000 831 >, /* overclock */
+			< 2726400000 1105000 831 >; /* overclock */
 
 		qcom,speed2-pvs6-bin-v0 =
 			<          0       0   0 >,
@@ -1376,7 +1376,7 @@
 			< 2457600000  955000 738 >, /* overclock */
 			< 2572800000 1055000 784 >, /* overclock */
 			< 2649600000 1070000 808 >, /* overclock */
-			< 2726400000 1090000 831 >, /* overclock */
+			< 2726400000 1090000 831 >; /* overclock */
 
 		qcom,speed1-pvs0-bin-v0 =
 			<          0       0   0 >,
@@ -1411,7 +1411,7 @@
 			< 2457600000 1105000 738 >, /* overclock */
 			< 2572800000 1145000 784 >, /* overclock */
 			< 2649600000 1160000 808 >, /* overclock */
-			< 2726400000 1175000 831 >, /* overclock */
+			< 2726400000 1175000 831 >; /* overclock */
 
 		qcom,speed1-pvs1-bin-v0 =
 			<          0       0   0 >,
@@ -1446,7 +1446,7 @@
 			< 2457600000 1080000 738 >, /* overclock */
 			< 2572800000 1130000 784 >, /* overclock */
 			< 2649600000 1145000 808 >, /* overclock */
-			< 2726400000 1160000 831 >, /* overclock */
+			< 2726400000 1160000 831 >; /* overclock */
 
 		qcom,speed1-pvs2-bin-v0 =
 			<          0       0   0 >,
@@ -1481,7 +1481,7 @@
 			< 2457600000 1055000 738 >, /* overclock */
 			< 2572800000 1115000 784 >, /* overclock */
 			< 2649600000 1130000 808 >, /* overclock */
-			< 2726400000 1150000 831 >, /* overclock */
+			< 2726400000 1150000 831 >; /* overclock */
 
 		qcom,speed1-pvs3-bin-v0 =
 			<          0       0   0 >,
@@ -1516,7 +1516,7 @@
 			< 2457600000 1030000 738 >, /* overclock */
 			< 2572800000 1100000 784 >, /* overclock */
 			< 2649600000 1115000 808 >, /* overclock */
-			< 2726400000 1135000 831 >, /* overclock */
+			< 2726400000 1135000 831 >; /* overclock */
 
 		qcom,speed1-pvs4-bin-v0 =
 			<          0       0   0 >,
@@ -1551,7 +1551,7 @@
 			< 2457600000 1005000 738 >, /* overclock */
 			< 2572800000 1085000 784 >, /* overclock */
 			< 2649600000 1100000 808 >, /* overclock */
-			< 2726400000 1120000 831 >, /* overclock */
+			< 2726400000 1120000 831 >; /* overclock */
 
 		qcom,speed1-pvs5-bin-v0 =
 			<          0       0   0 >,
@@ -1586,7 +1586,7 @@
 			< 2457600000  980000 738 >, /* overclock */
 			< 2572800000 1070000 784 >, /* overclock */
 			< 2649600000 1085000 808 >, /* overclock */
-			< 2726400000 1105000 831 >, /* overclock */
+			< 2726400000 1105000 831 >; /* overclock */
 
 		qcom,speed1-pvs6-bin-v0 =
 			<          0       0   0 >,
@@ -1621,7 +1621,7 @@
 			< 2457600000  955000 738 >, /* overclock */
 			< 2572800000 1055000 784 >, /* overclock */
 			< 2649600000 1070000 808 >, /* overclock */
-			< 2726400000 1090000 831 >, /* overclock */
+			< 2726400000 1090000 831 >; /* overclock */
 	};
 
 	qcom,cpubw {
@@ -1668,7 +1668,7 @@
 			< 2457600 1728000 7448 /* 931 MHz */ >, /* overclock */
 			< 2572800 1728000 7448 /* 931 MHz */ >, /* overclock */
 			< 2649600 1728000 7448 /* 931 MHz */ >, /* overclock */
-			< 2726400 1728000 7448 /* 931 MHz */ >, /* overclock */
+			< 2726400 1728000 7448 /* 931 MHz */ >; /* overclock */
 	};
 
 	usb3: qcom,ssusb@f9200000 {
