--- a/arch/arm/configs/cm_rhine_honami_row_defconfig
+++ b/arch/arm/configs/cm_rhine_honami_row_defconfig
@@ -614,10 +614,13 @@ CONFIG_CRYPTO_DEV_QCE=y
 CONFIG_CRYPTO_DEV_QCEDEV=y
 
 # Modifications
-CONFIG_MSM_CPUFREQ_LIMITER=y
 CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
 CONFIG_MSM_CPU_FREQ_MAX=2265600
 CONFIG_MSM_CPU_FREQ_MIN=300000
 CONFIG_CPU_VOLTAGE_TABLE=y
 CONFIG_SOUND_CONTROL_HAX_3_GPL=y
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
+CONFIG_MSM_CPUFREQ_LIMITER=y
+CONFIG_FAST_HOTPLUG=y
+CONFIG_NR_CPUS=4
+CONFIG_POWERSUSPEND=y
